# uMachine

./: .gitignore  CMakeLists.txt  ReadMe.txt  add.txt  compile copy  compile.sh  count.txt  executeIns  fib.txt  make_windows.bat  prog2.txt  test.txt  ucode.cpp  uload.c  uscan.c  uvalues.h
machine/: CMakeLists.txt  lex.yy.cc  uconfig.h  uexec.cpp  uexec.h  uload.cpp  uload.h  umach.cpp  umach.h  uscan.cpp  uscan.h  uscan.l  uvalues.cpp  uvalues.h
